--- a/Website/src/app.html
+++ b/Website/src/app.html
@@ -7,6 +7,11 @@
 		<title>Dawnshard</title>
 		%sveltekit.head%
 	</head>
+	<style>
+		#drawer-content > :not(#my-content) {
+				display: none;
+		}
+	</style>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
